# tdd-agents

./: .gitignore  AGENTS.md  README.md  TODO.md  project.md  pyproject.toml
katas/mars-rover/code/: main.py
katas/mars-rover/tests/: generated_tests.py
src/: __init__.py  cli.py  orchestrator.py  state.py
src/agents/: base.py  implementer.py  refactorer.py  supervisor.py  tester.py
src/tdd_agents/: __init__.py  cli.py  diff.py  llm.py  naming.py  orchestrator.py  persist.py  prompts.py  runtime_validation.py  sanitize.py  state.py  validation.py
src/tdd_agents/agents/: base.py  implementer.py  refactorer.py  supervisor.py  tester.py
tests/: test_abort_behavior.py  test_cli.py  test_cycle_sanitization.py  test_diff_truncation.py  test_diff_utility.py  test_llm_selection.py  test_multi_cycle.py  test_orchestrator.py  test_persistence_and_streaming.py  test_prompt_diff_truncation.py  test_prompts_diff_context.py  test_sanitize.py  test_seeding.py  test_state_schema.py  test_supervisor_reason_and_accumulation.py  test_supervisor_stagnation.py  test_supervisor_unrelated.py  test_validation.py
